--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-10  Adam Roben  <aroben@apple.com>
+
+        Remove now-passing tests
+
+        Rubberstamped by Sam.
+
+        * platform/win/Skipped:
+
 2007-10-09  Lars Knoll  <lars@trolltech.com>
 
         Reviewed by Simon.
