--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,19 @@
+2007-10-11  Lars Knoll  <lars@trolltech.com>
+
+        Reviewed by Erik Seidel and Simon.
+
+        Ensure that setting innerHTML on an element doesn't do
+        weird things with the document.
+        Fixes most issues with http://bugs.webkit.org/show_bug.cgi?id=15456
+
+        Test: fast/innerHTML/innerHTML-changing-document-properties.xhtml
+
+        * dom/XMLTokenizer.cpp:
+        (WebCore::XMLTokenizer::write):
+        (WebCore::XMLTokenizer::startDocument):
+        (WebCore::XMLTokenizer::end):
+        (WebCore::):
+
 2007-10-10  George Staikos  <staikos@kde.org>
 
         Reviewed by Adam Roben.
