--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,19 @@
+2007-06-25  Antti Koivisto  <antti@apple.com>
+
+        Reviewed by Maciej.
+        
+        Use intHash to hash floats and doubles too.
+
+        * ChangeLog:
+        * wtf/HashFunctions.h:
+        (WTF::FloatHash::hash):
+        (WTF::FloatHash::equal):
+        (WTF::):
+        * wtf/HashTraits.h:
+        (WTF::FloatHashTraits::emptyValue):
+        (WTF::FloatHashTraits::deletedValue):
+        (WTF::):
+
 === End merge of feature-branch 11-11-2007 ===
 
 2007-10-11  Mark Rowe  <mrowe@apple.com>
