--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,11 @@
+2007-06-29  Antti Koivisto  <antti@apple.com>
+
+        Reviewed by Weinig.
+        
+        Add VIDEO flag for timed media features
+
+        * Scripts/build-webkit
+        
 === End merge of feature-branch 11-11-2007 ===
 
 2007-10-11  Kevin McCullough  <kmccullough@apple.com>
