--- a/WebKit/ChangeLog
+++ b/WebKit/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-01  Oliver Hunt  <oliver@apple.com>
+
+        Reviewed by Mark.
+
+        Enable Experimental SVG features by default when building from Xcode
+
+        * Configurations/WebKit.xcconfig:
+
 === End merge of feature-branch 11-11-2007 ===
 
 2007-10-11  Mark Rowe  <mrowe@apple.com>
