--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-03  Rob Buis  <buis@kde.org>
+
+        Reviewed by Olliej.
+
+        Adapt to changed location of Ahem font.
+
+        * DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj:
+
 2007-10-02  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Roben.
