Reviewed by Mark Rowe.
        Mac build fix for issue introduced in r26027

        * WebCoreSupport/WebSystemInterface.m:
        (InitWebCoreSystemInterface):



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26491 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/ChangeLog
+++ b/WebKit/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-03  Andrew Wellington  <proton@wiretapped.net>
+
+        Reviewed by Mark Rowe.
+        
+        Mac build fix for issue introduced in r26027
+
+        * WebCoreSupport/WebSystemInterface.m:
+        (InitWebCoreSystemInterface):
+
 2007-10-01  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Oliver Hunt.
