HackTop [26957:WebKitTools]% less ChangeLog                           [/Stuff/Projects/WebKit/WebKitTools] 2007-10-08  Eric Seidel  <eric@webkit.org>
        Reviewed by Mark Rowe.

        * Scripts/build-webkit: add --help, remove unused --color



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26524 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-08  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Mark Rowe.
+
+        * Scripts/build-webkit: add --help, remove unused --color
+
 2007-10-07  Eric Seidel  <eric@webkit.org>
 
         Reviewed by darin.
