Reviewed by Maciej.
        http://bugs.webkit.org/show_bug.cgi?id=15088
        HTMLOptionElement.selected returns false when parent HTMLSelectElement is "display: none" until parent's .selectedIndex is accessed

        Make sure the list items are up to date when there is no renderer.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26525 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,15 @@
+2007-10-09  Rob Buis  <buis@kde.org>
+
+        Reviewed by Maciej.
+
+        http://bugs.webkit.org/show_bug.cgi?id=15088
+        HTMLOptionElement.selected returns false when parent HTMLSelectElement is "display: none" until parent's .selectedIndex is accessed
+
+        Make sure the list items are up to date when there is no renderer.
+
+        * html/HTMLSelectElement.cpp:
+        (WebCore::HTMLSelectElement::recalcStyle):
+
 2007-10-08  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Oliver.
