--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,14 @@
+2007-10-09  Rob Buis  <buis@kde.org>
+
+        Reviewed by Maciej.
+
+        Testcase for:
+        http://bugs.webkit.org/show_bug.cgi?id=15088
+        HTMLOptionElement.selected returns false when parent HTMLSelectElement is "display: none" until parent's .selectedIndex is accessed
+
+        * fast/forms/HTMLOptionElement_selected-expected.txt: Added.
+        * fast/forms/HTMLOptionElement_selected.html: Added.
+
 2007-10-08  Eric Seidel  <eric@webkit.org>
 
         Reviewed by hyatt.
