--- a/WebKit/ChangeLog
+++ b/WebKit/ChangeLog
@@ -1,3 +1,5 @@
+=== Start merge of feature-branch 11-11-2007 ===
+
 2007-10-03  Andrew Wellington  <proton@wiretapped.net>
 
         Reviewed by Mark Rowe.
