--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-12  Mark Rowe  <mrowe@apple.com>
+
+        Windows, Gtk and Qt build fixes.  Add new files to projects.
+
+        * WebCore.pro:
+        * WebCore.vcproj/WebCore.vcproj:
+
 === Start merge of feature-branch 11-11-2007 ===
 
 2007-10-11  Oliver Hunt  <oliver@apple.com>
