Correct expected output of a few test cases
RS=Eric

        * platform/mac/dom/xhtml/level2/html/HTMLBaseElement01-expected.txt:
        * platform/mac/dom/xhtml/level2/html/HTMLBaseElement02-expected.txt:
        * platform/mac/fast/dom/dom-parse-serialize-expected.txt:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26546 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-12  Oliver Hunt  <oliver@apple.com>
+
+        RS=Eric.
+
+        Correct expected output of a few test cases
+
+        * platform/mac/dom/xhtml/level2/html/HTMLBaseElement01-expected.txt:
+        * platform/mac/dom/xhtml/level2/html/HTMLBaseElement02-expected.txt:
+        * platform/mac/fast/dom/dom-parse-serialize-expected.txt:
+
 === Start merge of feature-branch 11-11-2007 ===
 
 2007-10-11  Oliver Hunt  <oliver@apple.com>
