* fast/css/computed-style-expected.txt: Again, but right this time.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26555 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,9 @@
 2007-10-12  Darin Adler  <darin@apple.com>
 
+        * fast/css/computed-style-expected.txt: Again, but right this time.
+
+2007-10-12  Darin Adler  <darin@apple.com>
+
         Reviewed by Oliver Hunt.
 
         * fast/css/computed-style-expected.txt: Added SVG CSS properties.
