--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-10-12  Darin Adler  <darin@apple.com>
+
+        Reviewed by Sam.
+
+        - more float/int conversion (to try to get the old builbot up)
+
+        * rendering/RenderSVGRoot.cpp:
+        (WebCore::RenderSVGRoot::layout): Cast to int.
+        (WebCore::RenderSVGRoot::applyContentTransforms): Ditto.
+        (WebCore::RenderSVGRoot::nodeAtPoint): Ditto.
+
 2007-10-12  Justin Garcia  <justin.garcia@apple.com>
 
         Reviewed by Harrison.
