Reviewed by Darin.
        * platform/mac/editing/pasteboard/paste-RTFD-expected.txt: Update results to reflect current
        tree. Reopening <rdar://problem/5483567> (see below) to note the potential bug.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26568 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-12  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Darin.
+
+        * platform/mac/editing/pasteboard/paste-RTFD-expected.txt: Update results to reflect current
+        tree. Reopening <rdar://problem/5483567> (see below) to note the potential bug.
+
 2007-10-12  Darin Adler  <darin@apple.com>
 
         Reviewed by Oliver Hunt.
