2007-10-14  Maxime Britto  <mbritto@pleyo.com>
        Reviewed by Mitz.

        Fix an error in the goBackOrForward() function : confusion between forwardListCount and backListCount.
        http://bugs.webkit.org/show_bug.cgi?id=15212

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::goBackOrForward):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26588 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-14  Maxime Britto  <mbritto@pleyo.com>
+
+        Reviewed by Mitz.
+
+        Fix an error in the goBackOrForward() function : confusion between forwardListCount and backListCount.
+        http://bugs.webkit.org/show_bug.cgi?id=15212
+
+        * loader/FrameLoader.cpp:
+        (WebCore::FrameLoader::goBackOrForward):
+
 2007-10-14  Mitz Pettel  <mitz@webkit.org>
 
         Reviewed by Darin.
