--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-14  Peter Kasting  <zerodpx@gmail.com>
+
+        Reviewed by Maciej.
+
+        http://bugs.webkit.org/show_bug.cgi?id=15210
+        Draw the image outline even for broken images.
+
+        * rendering/RenderImage.cpp:
+        (WebCore::RenderImage::paint):
+
 2007-10-14  Kevin Ollivier  <kevino@theolliviers.com>
 
         Reviewed by Adam.
