2007-10-15  Jon Honeycutt  <jhoneycutt@apple.com>
        Reviewed by Maciej.

        Add a missing function pointer to the m_browserFuncs structure

        * plugins/win/PluginPackageWin.cpp:
        (WebCore::PluginPackageWin::load):



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26607 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-15  Jon Honeycutt  <jhoneycutt@apple.com>
+
+        Reviewed by Maciej.
+
+        Add a missing function pointer to the m_browserFuncs structure
+
+        * plugins/win/PluginPackageWin.cpp:
+        (WebCore::PluginPackageWin::load):
+
 2007-10-15  Simon Hausmann  <hausmann@kde.org>
 
         Reviewed by Lars.
